	- http:// links now open in the browser
	- fix bug #339383 (delete subtask when deleting first char)
	- Edit buttons : patches from Antons Rebguns 
	- Escape title in the treeview : Bug ##339874
	- Focus in the editor : Bug #339269, Bug #339195, Bug #339389
	- Bug #339269 : Quickadd has the focus on launch
	- Bug #339583, Bug #336314 : patches delete key and
	    enter key to confirm a delete (thanks Gérôme Fournier)
	- Typos : Bug #339268 Bug #339492 and other patches from Gérôme Fournier.

2009-06-01 Getting Things Gnome ! 0.1
	* Bumping version number. First release of GTG

2009-03-01 Getting Things Gnome! 0.0.9rc3
	* pane/sidebar not saved

2009-03-01 Getting Things Gnome! 0.0.9rc2
	* firstrun_tasks.xml not found on first launch

2009-03-01 Getting Things Gnome! 0.0.9rc1
	* First official release 0.1rc1