@@ -7,8 +7,11 @@ The GTG Team:
 * Lionel Dricot <ploum@ploum.net>
 * Bertrand Rousseau <bertrand.rousseau@gmail.com>
 
-Thanks to the contributors :
-===========================
+Thanks to the contributors
+==========================
 
+For 0.2 :
+--------
 * Gérôme Fournier <>
 * Antons Rebguns  <arebgun@gmail.com>
+* Carl Chenet <chaica@ohmytux.com>
