@@ -222,7 +222,6 @@ Aenean mollis neque et magna fringilla volutpat. Donec elementum, justo vitae rh
 
 Sed tincidunt. Nunc vel felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed luctus massa et orci. Duis dictum convallis purus. Donec mattis quam nec ante. Aliquam gravida fermentum risus. Nullam in felis eget tortor ultricies porttitor. Vestibulum nibh. Sed euismod pede ac erat. Fusce ac odio. Fusce ultricies mauris at justo pulvinar ultrices. Nullam eget enim nec nibh pellentesque scelerisque. Proin porttitor. Nunc in purus.
 &lt;tag&gt;@lorem_ipsum&lt;/tag&gt;, &lt;tag&gt;@vampire&lt;/tag&gt;, &lt;tag&gt;@t2&lt;/tag&gt;, 
-
 		</content>
 	</task>
 	<task id="20@1" status="Dismiss" tags="">
@@ -297,6 +296,7 @@ et pas pour d'autres.
 			&lt;tag&gt;@aze&lt;/tag&gt; 
 qsdf
 http://fritalk.com
+
 		</content>
 	</task>
 </project>
